force-app/main/default/objects/CleverTap__Mapping__c/fields/CleverTap__Field__c.field-meta.xml
<CustomField>
    <fullName>CleverTap__Field__c</fullName>
    <label>CleverTap Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>