force-app/main/default/objects/CleverTap__Mapping__c/fields/CleverTap__Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>CleverTap__Is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mandatory</label>
    <type>Checkbox</type>
</CustomField>