force-app/main/default/objects/CleverTap__Mapping__c/fields/CleverTap__Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>CleverTap__Salesforce_Field__c</fullName>
    <label>Salesforce Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>