force-app/main/default/objects/CleverTap__Mapping__c/fields/CleverTap__Sync_mapping__c.field-meta.xml
<CustomField>
    <fullName>CleverTap__Sync_mapping__c</fullName>
    <label>Sync Configuration</label>
    <referenceTo>CleverTap__Sync_Configuration__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>